[css-grid] Fix scroll reset when updating content of grid item

This patch simply uses DelayScrollOffsetClampScope to avoid
resetting scroll position when the contents of a grid item are modified.

BUG=833837
TEST=fast/css-grid-layout/grid-item-scroll-position.html

Change-Id: I74dd5e67d432b7b86b756ed741c7ad24243e6b8e
Reviewed-on: https://chromium-review.googlesource.com/1165983
Commit-Queue: Manuel Rego <rego@igalia.com>
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581404}
Former-commit-id: c4b63701a1580e28962aa8693e767d74163b17aa