third_party/blink/renderer/core/layout/layout_grid.cc
@@ -36,6 +36,7 @@
 #include "third_party/blink/renderer/core/layout/text_autosizer.h"
 #include "third_party/blink/renderer/core/paint/grid_painter.h"
 #include "third_party/blink/renderer/core/paint/paint_layer.h"
+#include "third_party/blink/renderer/core/paint/paint_layer_scrollable_area.h"
 #include "third_party/blink/renderer/core/style/computed_style.h"
 #include "third_party/blink/renderer/core/style/grid_area.h"
 #include "third_party/blink/renderer/platform/length_functions.h"
@@ -255,6 +256,8 @@ void LayoutGrid::UpdateBlockLayout(bool relayout_children) {
     return;
 
   SubtreeLayoutScope layout_scope(*this);
+
+  PaintLayerScrollableArea::DelayScrollOffsetClampScope delay_clamp_scope;
 
   {
     // LayoutState needs this deliberate scope to pop before updating scroll
